test/compile_errors/err_unit_elision_non_unit_pattern.w
//! expect-check-fail: variant pattern 'Ok' expects 1 payload pattern(s), found 0

fn main:
    let r: Result[i32, str] = Ok(1)
    match r:
        Ok() => ()
        Err(_) => ()
